Bug 1708446 - Send NotifyJankedAnimations to WebRenderLayerManager in parent process r=hiro

NotifyJankedAnimations is not handled for WebRenderLayerManager in parent process.

Differential Revision: https://phabricator.services.mozilla.com/D115470